--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,9 +29,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">
-            <%= image_tag("genmeme_logo.png", alt: "GenMeme logo", id: "logo")%>
-          </a>
+          <%= link_to(image_tag("genmeme_logo.png", alt: "GenMeme logo", id:
+                                "logo"), root_path, :class => "navbar-brand") %>
         </div>
         <div class="collapse navbar-collapse" id="nav-collapse">
           <form class="navbar-form navbar-left">
@@ -47,7 +46,23 @@
       </div>
     </nav>
     <div class="container-fluid">
-      <%= yield %>
+      <div class="row">
+        <div class="col-md-1" id="sidenav">
+          <div class="btn-group-vertical center-block" id="create-btn-div">
+            <button type="button" class="btn btn-success">Create Meme</button>
+          </div>
+          <ul class="nav nav-pills nav-stacked">
+            <li role="presentation" id="nav-recent"><a href="#">Recent</a></li>
+            <li role="presentation" id="nav-popular"><a href="#">Popular</a></li>
+            <li role="presentation" id="nav-templates"><a href="#">Templates</a></li>
+            <li role="presentation"><a href="#">Random</a></li>
+            <li role="presentation" id="nav-profile"><a href="#">Your Profile</a></li>
+          </ul>
+        </div>
+        <div class="col-md-11">
+          <%= yield %>
+        </div>
+      </div>
     </div>
   </body>
 </html>
