--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,6 @@
 <% provide(:title, "Top Keks") %>
 <h1>StaticPages#home</h1>
 <p>Find me in app/views/static_pages/home.html.erb</p>
+<script type="text/javascript">
+  $("#nav-recent").addClass("active");
+</script>
