update sidebar for templates

--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -1,3 +1,7 @@
+<% provide(:title, "Templates") %>
+<script type="text/javascript">
+  $("#nav-templates").addClass("active");
+</script>
 <p id="notice"><%= notice %></p>
 
 <h1>Templates</h1>
