--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,9 +52,9 @@
             <button type="button" class="btn btn-success">Create Meme</button>
           </div>
           <ul class="nav nav-pills nav-stacked">
-            <li role="presentation" id="nav-recent"><a href="#">Recent</a></li>
+            <li role="presentation" id="nav-recent"><%= link_to("Recent", root_path) %></li>
             <li role="presentation" id="nav-popular"><a href="#">Popular</a></li>
-            <li role="presentation" id="nav-templates"><a href="#">Templates</a></li>
+            <li role="presentation" id="nav-templates"><%= link_to("Templates", templates_path) %></li>
             <li role="presentation"><a href="#">Random</a></li>
             <li role="presentation" id="nav-profile"><a href="#">Your Profile</a></li>
           </ul>
