--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -1,33 +1,25 @@
 <% provide(:title, "Templates") %>
 <script type="text/javascript">
-  $("#nav-templates").addClass("active");
+$("#nav-templates").addClass("active");
 </script>
 <p id="notice"><%= notice %></p>
-
-<h1>Templates</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Url</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<div class="row">
+  <div class="col-md-1">
+    <h1>Templates</h1>
+  </div>
+  <div class="col-md-1">
+    <div class="btn-group">
+      <button class="btn btn-default" type="button"><%= link_to 'New Template', new_template_path %></button>
+    </div>
+  </div>
+  <div class="clearfix"></div>
+  <div class="row">
     <% @templates.each do |template| %>
-      <tr>
-        <td><%= template.name %></td>
-        <td><%= template.url %></td>
-        <td><%= link_to 'Show', template %></td>
-        <td><%= link_to 'Edit', edit_template_path(template) %></td>
-        <td><%= link_to 'Destroy', template, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <div class="col-xs-6 col-md-3">
+        <div class="thumbnail">
+          <%= image_tag(template.url, :class => "template-img") %>
+        </div>
+      </div>
     <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Template', new_template_path %>
+  </div>
+</div>
