--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -4,18 +4,17 @@ $("#nav-templates").addClass("active");
 </script>
 <p id="notice"><%= notice %></p>
 <div class="row">
-  <div class="col-md-1">
-    <h1>Templates</h1>
-  </div>
-  <div class="col-md-1">
-    <div class="btn-group">
-      <button class="btn btn-default" type="button"><%= link_to 'New Template', new_template_path %></button>
-    </div>
+  <div class="col-md-12">
+    <h2>Templates&nbsp;
+      <div class="btn-group">
+        <button class="btn btn-default" type="button"><%= link_to 'New Template', new_template_path %></button>
+      </div>
+    </h2>
   </div>
   <div class="clearfix"></div>
   <div class="row">
     <% @templates.each do |template| %>
-      <div class="col-xs-6 col-md-3">
+      <div class="col-xs-4 col-md-3">
         <div class="thumbnail">
           <%= image_tag(template.url, :class => "template-img") %>
         </div>
