apparently I forgot how buttons work in HTML5

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
       <div class="row">
         <div class="col-md-1" id="sidenav">
           <div class="btn-group-vertical center-block" id="create-btn-div">
-            <button type="button" class="btn btn-success">Create Meme</button>
+            <a href="#" class="btn btn-success">Create Meme</a>
           </div>
           <ul class="nav nav-pills nav-stacked">
             <li role="presentation" id="nav-recent"><%= link_to("Recent", root_path) %></li>
