--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="col-md-12">
     <h2>Templates&nbsp;
-      <button class="btn btn-default" type="button"><%= link_to 'New Template', new_template_path %></button>
+      <%= link_to 'New Template', new_template_path, :class => "btn btn-default"%>
     </h2>
   </div>
   <div class="clearfix"></div>
