--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -9,9 +9,10 @@
   <div class="clearfix"></div>
   <div class="row">
     <% @templates.each do |template| %>
-      <div class="col-xs-4 col-md-3">
+      <div class="col-xs-6 col-sm-4 col-md-3 card">
         <div class="thumbnail">
-          <%= image_tag(template.url, :class => "template-img") %>
+          <%= link_to(image_tag(template.url, :class => "template-img"),
+                      template) %>
         </div>
       </div>
     <% end %>
