--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -12,7 +12,7 @@
       <div class="col-xs-6 col-sm-4 col-md-3 card">
         <div class="thumbnail">
           <%= link_to(image_tag(template.url, :class => "template-img"),
-                      template) %>
+                      template, :title => template.name) %>
         </div>
       </div>
     <% end %>
