--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -1,10 +1,18 @@
 <% provide(:title, "Templates") %>
 <% if notice %><p id="notice"><%= notice %></p> <% end %>
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-4">
     <h2>Templates&nbsp;
       <%= link_to 'New Template', new_template_path, :class => "btn btn-default"%>
     </h2>
+  </div>
+  <div class="col-md-8">
+    <form>
+      <div class="form-group">
+        <input type="text" class="form-control" id="template-search" placeholder="Search templates">
+      </div>
+      <button type="submit" class="btn btn-default" id="template-search-button">Submit</button>
+    </form>
   </div>
   <div class="clearfix"></div>
   <div class="row">
