--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,8 @@
   <body>
     <nav class="navbar navbar-default navbar-static-top">
       <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed"
+        <div class="navbar-header" id="top-nav-header">
+          <button type="button" class="navbar-toggle collapsed" id="top-nav-toggle"
                                 data-toggle="collapse" data-target="#nav-collapse"
                                                        aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
