--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -7,7 +7,7 @@
     </h2>
   </div>
   <div class="col-md-3">
-    <%= bootstrap_form_tag url: :templates, method: "get", layout: :inline, :id => "template-search" do |f| %>
+    <%= bootstrap_form_tag url: :templates, method: "get", layout: :inline do |f| %>
         <%= f.text_field :query, skip_label: true, placeholder: "Search templates" %>
         <%= f.submit :submit, name: nil%>
       <% end %>
