Add nice alert/notice bar at top of page Needed for login failure/success notif

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,5 +1,9 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+.alert-top {
+  margin-bottom: 0;
+  border-radius: 0;
+}
 #searchbar {
   min-width: 500px;
 }
