--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
           </form>
           <ul class="nav navbar-right navbar-nav">
             <% if user_signed_in? %>
-              <li>Signed in as <%= current_user.email %></li>
+              <li><span class="navbar-text">Signed in as <%= current_user.username %></span></li>
               <li><%= link_to "Logout", destroy_user_session_path, method: :delete, class: "navbar-link" %></li>
             <% else %>
               <li><%= link_to "Sign Up", new_user_registration_path, class: "navbar-link" %></li>
@@ -74,7 +74,7 @@
             <li role="presentation" id="nav-popular"><a href="#">Popular</a></li>
             <li role="presentation" id="nav-templates"><%= link_to("Templates", templates_path) %></li>
             <li role="presentation"><a href="#">Random</a></li>
-            <li role="presentation" id="nav-profile"><a href="#">Your Profile</a></li>
+            <li role="presentation" id="nav-profile"><%= link_to("Your Profile", edit_user_registration_path) %></li>
           </ul>
         </div>
         <div class="col-md-11">
