formatting of meme imgs

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -43,6 +43,10 @@
   height: 150px !important;
 }
 
+.meme-img {
+  height: 500px !important;
+}
+
 
 // Search bar in main content panel (i.e. for templates)
 div.col-md-3 > form {
