--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,18 @@
-<% provide(:title, "Profile") %>
-Profile for <i><%= @user.username %></i>
+<% provide(:title, "My Profile") %>
+
+<div class="row">
+	<ul class="nav nav-tabs">
+	  <li role="presentation" class="active">
+	  	<%= link_to "My Profile", user_path %>
+	  </li>
+	  <li role="presentation">
+	  	<%= link_to "My memes", user_memes_path %>
+	  </li>
+	  <li role="presentation">
+	  	<%= link_to "My Templates", user_templates_path %>
+	  </li>
+	</ul>
+</div>
+
+
+
