add tabs on user page for profile, memes, and templates

--- a/app/views/memes/new.html.erb
+++ b/app/views/memes/new.html.erb
@@ -19,7 +19,7 @@
 	    </div>
 	    <br>
         <br>
-        <canvas id="meme" class="meme-img"></canvas>
+        <canvas id="meme" class="meme"></canvas>
      <% end %>
   </div>
 </div>
