--- a/app/views/memes/index.html.erb
+++ b/app/views/memes/index.html.erb
@@ -34,6 +34,13 @@
 
 <br>
 
+<div class="row">
+  <div class="col-md-12">
+    <div class="text-center">
+      <%= will_paginate @memes, renderer: BootstrapPagination::Rails %>
+    </div>
+  </div>
+</div>
 <%= link_to 'New Meme', new_meme_path %>
 <% content_for :footerjs do %>
   <script type="text/javascript">
