Update template model to use image instead of :url Add config for S3 dev and prod Push images to S3, uploaded or from URL

--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -17,7 +17,7 @@
   <% @templates.each do |template| %>
     <div class="col-xs-6 col-sm-4 col-md-3 card">
       <div class="thumbnail">
-        <%= link_to(image_tag(template.url, :class => "template-img"),
+        <%= link_to(image_tag(template.image.url, :class => "template-img"),
                     template, :title => template.name) %>
     </div>
     </div>
