--- a/app/views/templates/show.html.erb
+++ b/app/views/templates/show.html.erb
@@ -6,7 +6,7 @@
 
 <p>
   <strong>Url:</strong>
-  <%= @template.url %>
+  <%= @template.image.url %>
 </p>
 
 <%= link_to 'Edit', edit_template_path(@template) %> |
