--- a/app/views/templates/_form.html.erb
+++ b/app/views/templates/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(template) do |f| %>
+<%= form_for(template, html: {multipart: true}) do |f| %>
   <% if template.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(template.errors.count, "error") %> prohibited this template from being saved:</h2>
@@ -14,6 +14,10 @@
   <div class="field">
     <%= f.label :name %>
     <%= f.text_field :name %>
+  </div>
+
+  <div class="field">
+    <%= f.file_field :image %>
   </div>
 
   <div class="field">
