--- a/app/views/templates/_grid.html.erb
+++ b/app/views/templates/_grid.html.erb
@@ -2,7 +2,7 @@
   <% @templates.each do |template| %>
     <div class="col-xs-6 col-sm-4 col-md-3 card">
       <div class="thumbnail">
-        <%= image_tag(template.url, :class => "template-img", :data => { :template_id => template.id }) %>
+        <%= image_tag(template.image.url, :class => "template-img", :data => { :template_id => template.id }) %>
     </div>
     </div>
   <% end %>
