Loading... when creating meme

--- a/app/views/memes/new.html.erb
+++ b/app/views/memes/new.html.erb
@@ -74,6 +74,12 @@
           .attr('value', template_id)
           .appendTo('#new_meme');
     });
+    $('[name=commit]').on('click', function() {
+      if (!template_id) return false;
+      $(this).val("Loading...");
+      $(this).prop('disabled', true);
+      $(this).parent('form').submit();
+    });
  	</script>
 
 	<script type="text/javascript">
