fix index for memes

--- a/app/views/memes/index.html.erb
+++ b/app/views/memes/index.html.erb
@@ -1,37 +1,12 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Memes</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Url</th>
-      <th>Top caption</th>
-      <th>Bottom caption</th>
-      <th>Template</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @memes.each do |meme| %>
-      <tr>
-        <td><%= meme.image.url %></td>
-        <td><%= meme.top_caption %></td>
-        <td><%= meme.bottom_caption %></td>
-        <td><%= meme.template %></td>
-        <td><%= meme.user %></td>
-        <td><%= link_to 'Show', meme %></td>
-        <td><%= link_to 'Edit', edit_meme_path(meme) %></td>
-        <td><%= link_to 'Destroy', meme, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<% provide(:title, "Recent Memes") %>
 
 <div class="row">
-
+  <div class="col-md-12">
+    <h2 id="subheader">Recent Memes</h2>
+  </div>
+</div>
+<hr />
+<div class="row">
   <% @memes.each do |meme| %>
     <div class="col-xs-6 col-sm-4 col-md-3 card">
       <div class="thumbnail">
@@ -50,14 +25,6 @@
       %>
     </div>
   <% end %>
-
 </div>
 
-<br>
-
-<%= link_to 'New Meme', new_meme_path %>
-<% content_for :footerjs do %>
-  <script type="text/javascript">
-    $("#nav-recent").addClass("active");
-  </script>
-<% end %>
+</div>
