--- a/app/views/memes/show.html.erb
+++ b/app/views/memes/show.html.erb
@@ -26,4 +26,5 @@
 </p>
 
 <%= link_to 'Edit', edit_meme_path(@meme) %> |
-<%= link_to 'Back', memes_path %>
+<%= link_to 'Back', memes_path %> |
+<%= link_to 'Comment', new_comment_path(comment: { meme_id: @meme.id, user_id: current_user.id }) %>
