--- a/app/views/memes/show.html.erb
+++ b/app/views/memes/show.html.erb
@@ -25,6 +25,13 @@
   <%= @meme.user %>
 </p>
 
+<% if(@meme.root_comments.present?) %>
+  <p>
+    <strong>Comments:</strong>
+    <%= render @meme.root_comments %>
+  </p>
+<% end %>
+
 <%= link_to 'Edit', edit_meme_path(@meme) %> |
 <%= link_to 'Back', memes_path %> |
 <%= link_to 'Comment', new_comment_path(comment: { meme_id: @meme.id, user_id: current_user.id }) %>
