fix some (somewhat unrelated) css

--- a/app/views/memes/new.html.erb
+++ b/app/views/memes/new.html.erb
@@ -94,7 +94,7 @@
           },
           dataType: "script",
           success: function() {
-                      $('.template-img').click(function(event) {
+                      $('.card-img').click(function(event) {
                         $('#memeimg').attr('src', $(this).attr('src'));
                         template_id = $(this).data("template-id");
                         scale_text($('#topcaption'));
