Add image to template show page

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -51,6 +51,10 @@
   height: 500px !important;
 }
 
+#template {
+  height: 500px !important;
+}
+
 // Search bar in main content panel (i.e. for templates)
 div.col-md-3 > form {
   float: right; // Makes the search look nice everywhere but mobile...
