--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,5 @@
 <div class="well well-sm" style="margin-top: 10px">
-  <%= comment.user.username %>:
+  <%= link_to(comment.user, comment.user)%>:
   <%= comment.message %><br>
   <%= link_to 'Reply', new_comment_path(comment: { meme_id: comment.meme.id, user_id: current_user.id, parent_id: comment.id }) if user_signed_in? %>
   <%= render comment.replies %>
